k8s/dev/deploymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-chat
  namespace: firsteps-dev
spec:
  selector:
    matchLabels:
      app: ms-chat
  replicas: 1
  template:
    metadata:
      labels:
         app: ms-chat
    spec:
      imagePullSecrets:
         - name: ghcr-secret-ms-chat
      containers:
         - name: ms-chat
           image: ghcr.io/juangomez0303/ms-chat:latest
           ports:
              - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: ms-chat
  namespace: firsteps-dev
spec:
#  type: NodePort
  selector:
    app: ms-chat
  ports:
    - protocol: TCP
      port: 8086
#      nodePort: 30001
      targetPort: 8086
